src/objects/WorkOrderLineItem.object
<CustomObject>
    <fields>
        <fullName>CUE_TXT_Direccion_Establecimiento__c</fullName>
        <label>Direccion Establecimiento</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__IsFillInCandidate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Fill In Candidate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__VisitingHours__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visiting Hours</label>
        <referenceTo>OperatingHours</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_CAS_Danos_Esteticos__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check que indica si la partida cubre daños estéticos.</description>
        <label>Daños Estéticos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAR_CAS_Orden_Trabajo_Anulada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Representa si la Orden de Trabajo a la que pertenece la partida está en estado &quot;Anulado&quot;</description>
        <label>Orden de Trabajo Anulada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Cantidad_Venta__c</fullName>
        <description>Importe a facturar a la compañía aseguradora.</description>
        <label>Cantidad Venta</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Cargar_Cliente_AI__c</fullName>
        <description>Importe a facturar al Cliente</description>
        <label>Facturación a Cliente antes de impuestos</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Cargar_Comp_AI__c</fullName>
        <description>Importe que se factura a la compañía del importe de la partida.</description>
        <label>Facturación a CIA antes de impuesto</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Facturacion_Total_AI__c</fullName>
        <description>Importe a facturar a la compañía/cliente sin impuestos</description>
        <label>Facturación Total antes de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Facturacion_Total_DI__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Importe a facturar a la compañía/cliente con impuestos</description>
        <label>Facturación Total después de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_gestor1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_gestor2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_gestor3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_prof1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_prof2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_Imputar_prof3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Importe a Imputar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Importe_a_imputar_Departamento__c</fullName>
        <label>Importe a imputar (Departamento)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Liquidar_Prof_AI__c</fullName>
        <description>Importe a liquidar al profesional sin Impuestos</description>
        <label>Liquidación prof antes de impuestos</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Liquidar_Prof_DI__c</fullName>
        <description>Importe a liquidar al profesional</description>
        <label>Liquidación prof después de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Liquidar_al_profesional__c</fullName>
        <description>Precio unitario a liquidar al profesional</description>
        <label>Liquidar al profesional</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_ListPrice__c</fullName>
        <description>Precio unitario a facturar a la compañía antes de descuentos</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_Precio_Unitario_Venta__c</fullName>
        <label>Precio Unitario Venta</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_DIV_UnitPrice__c</fullName>
        <description>Precio unitario a facturar a la compañía después de descuentos</description>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_FOR_Cargar_Cliente_DI__c</fullName>
        <formula>PAR_DIV_Cargar_Cliente_AI__c + (PAR_DIV_Cargar_Cliente_AI__c * PAR_POR_Porcentaje_Imp_Cia_Cliente__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facturación a Cliente después impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_FOR_Cargar_Comp_DI__c</fullName>
        <formula>PAR_DIV_Cargar_Comp_AI__c + (PAR_DIV_Cargar_Comp_AI__c * PAR_POR_Porcentaje_Imp_Cia_Cliente__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facturación a CIA después de impuestos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_FOR_Precio_Unitario_Venta_Cli__c</fullName>
        <formula>IF(PAR_DIV_Cargar_Cliente_AI__c &gt; 0, PAR_DIV_Precio_Unitario_Venta__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio Unitario Venta</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PAR_FOR_Usuario_profesional__c</fullName>
        <formula>IF(OR(PAR_LKP_Imputar_a_prof1__r.RelatedRecord.Id = $User.Id,PAR_LKP_Imputar_a_prof2__r.RelatedRecord.Id = $User.Id,PAR_LKP_Imputar_a_prof3__r.RelatedRecord.Id = $User.Id) ,1 , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usuario profesional</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_gestor1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partidas_de_rdenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_gestor2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partidas_de_rdenes_de_trabajo1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_gestor3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Partidas_de_rdenes_de_trabajo2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_prof1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Partidas de órdenes de trabajo</relationshipLabel>
        <relationshipName>Partidas_de_rdenes_de_trabajo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_prof2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Partidas de órdenes de trabajo (Imputar a)</relationshipLabel>
        <relationshipName>Partidas_de_rdenes_de_trabajo1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_LKP_Imputar_a_prof3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Imputar a</label>
        <referenceTo>ServiceResource</referenceTo>
        <relationshipLabel>Partidas de órdenes de trabajo (Imputar a)</relationshipLabel>
        <relationshipName>Partidas_de_rdenes_de_trabajo2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Altura__c</fullName>
        <description>Altura de cristales</description>
        <label>Altura</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Ancho__c</fullName>
        <description>Anchura de cristales</description>
        <label>Ancho</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Igic__c</fullName>
        <label>Igic</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Ipsi__c</fullName>
        <label>Ipsi</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Iva__c</fullName>
        <description>Valor del Impuesto (Ya sea IVA,IPSI o IGIC)</description>
        <label>Iva</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_NUM_Unidades__c</fullName>
        <description>Cantidad de de unidades de la partida</description>
        <label>Unidades</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAR_POR_Descuento__c</fullName>
        <description>Descuento aplicado por el agente en grandes siniestros o descuento acumulado por definición en el caso de presupuestos</description>
        <label>Descuento</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAR_POR_Impuesto_Prof__c</fullName>
        <description>Porcentaje impuesto liquidación profesional</description>
        <inlineHelpText>Porcentaje  impuesto liquidación profesional</inlineHelpText>
        <label>Porcentaje impuestos aplicado a Profesio</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAR_POR_Materiales__c</fullName>
        <label>Porcentaje Materiales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAR_POR_Porcentaje_Imp_Cia_Cliente__c</fullName>
        <description>Porcentaje impuesto cliente/compañía</description>
        <label>Porcentaje Impuestos Cliente/CIA</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PAR_SEL_Codigo_Impuesto_Venta__c</fullName>
        <description>Código del impuesto (IVA,IPSI,IGIC)</description>
        <label>Codigo Impuesto Venta</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IGICREP7</fullName>
                </value>
                <value>
                    <fullName>IPSIREP4</fullName>
                </value>
                <value>
                    <fullName>IVAREP10</fullName>
                </value>
                <value>
                    <fullName>IVAREP21</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAR_SEL_Danios_Del__c</fullName>
        <description>Asegurado/Perjudicado (En caso de Perjudicado: ¿Quién?)</description>
        <label>Daños Del</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asegurado</fullName>
                    <default>true</default>
                    <label>Asegurado</label>
                </value>
                <value>
                    <fullName>Perjudicado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAR_SEL_Departamento_Imputacion__c</fullName>
        <label>Departamento Imputación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercial</fullName>
                </value>
                <value>
                    <fullName>Otros</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAR_SEL_Motivo_Rechazo__c</fullName>
        <description>Motivo de rechazo en caso de que se rechace la partida</description>
        <label>Motivo de rechazo de una partida</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                    <label>Rechazada</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Otros</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAR_SEL_Unidades_Medida__c</fullName>
        <description>Unidades de medida de la partida</description>
        <label>Unidades Medida</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>m</fullName>
                </value>
                <value>
                    <fullName>m2</fullName>
                </value>
                <value>
                    <fullName>ud</fullName>
                </value>
                <value>
                    <fullName>horas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PAR_TXT_Baremo_Codigo__c</fullName>
        <description>Código que indica el baremo de la partida que va vinculado a la tarifa que se le aplica a la misma.</description>
        <label>Código de Baremo</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Baremo_Desc__c</fullName>
        <description>Texto descriptivo asociado al código de baremo.</description>
        <label>Descripción Baremo</label>
        <length>550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Ceco__c</fullName>
        <label>Ceco</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Detalle_Venta__c</fullName>
        <label>Detalle Venta</label>
        <length>360</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Detalle_WOLI__c</fullName>
        <label>Detalle Woli</label>
        <length>360</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Identificador__c</fullName>
        <description>Nº de Partida CPQ.  Este campo es necesario para almacenar el ID de CPQ de la partida.</description>
        <externalId>true</externalId>
        <inlineHelpText>CPQ Line item Number</inlineHelpText>
        <label>Nº de Partida CPQ</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PAR_TXT_S_Ref__c</fullName>
        <label>SRef</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAR_TXT_Unidades_Medida_Gastos__c</fullName>
        <label>Unidades Medida Gastos</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oracle Quote</label>
        <referenceTo>BigMachines__Quote__c</referenceTo>
        <relationshipLabel>Work Order Line Items</relationshipLabel>
        <relationshipName>Work_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WOLI_Ultima_modificacion__c</fullName>
        <label>Última modificación por</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Editar_campo_identificador</fullName>
        <active>true</active>
        <description>El campo identificador  no puede ser modificado</description>
        <errorConditionFormula>IF(AND(NOT(ISBLANK(PRIORVALUE(PAR_TXT_Identificador__c ))),ISCHANGED(PAR_TXT_Identificador__c )), true, false)</errorConditionFormula>
        <errorMessage>El campo identificador  no puede ser modificado</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Imputacion_partidas_Reclamaciones</fullName>
        <active>true</active>
        <description>Las partidas de los Servicios sólo pueden ser imputadas por el perfil de Gestor de Reclamaciones y Supervisor de Reclamaciones</description>
        <errorConditionFormula>AND(AND($Profile.Name &lt;&gt; &quot;Gestor de Reclamaciones&quot;,$Profile.Name &lt;&gt; &quot;Supervisor de Reclamaciones&quot;,$Profile.Name &lt;&gt; &quot;Administrador de Sistemas&quot; ),OR(ISCHANGED( PAR_DIV_Importe_a_Imputar_prof1__c), ISCHANGED( PAR_DIV_Importe_a_Imputar_prof2__c),ISCHANGED( PAR_DIV_Importe_a_Imputar_prof3__c),ISCHANGED( PAR_DIV_Importe_a_Imputar_gestor1__c),ISCHANGED( PAR_DIV_Importe_a_Imputar_gestor2__c),ISCHANGED( PAR_DIV_Importe_a_Imputar_gestor3__c),ISCHANGED( PAR_SEL_Departamento_Imputacion__c),ISCHANGED( PAR_DIV_Importe_a_imputar_Departamento__c ),ISCHANGED( PAR_LKP_Imputar_a_prof1__c ),ISCHANGED( PAR_LKP_Imputar_a_prof2__c ),ISCHANGED( PAR_LKP_Imputar_a_prof3__c ),ISCHANGED( PAR_LKP_Imputar_a_gestor1__c ),ISCHANGED( PAR_LKP_Imputar_a_gestor2__c ),ISCHANGED( PAR_LKP_Imputar_a_gestor3__c )))</errorConditionFormula>
        <errorMessage>Las partidas solo pueden ser imputadas por el departamento de Reclamaciones</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Relacion_imputar_importe</fullName>
        <active>true</active>
        <description>revisa si un imputar a: tiene su importe asociado</description>
        <errorConditionFormula>IF(
WorkOrder.OTR_CAS_Reclamacion_Vinculada__c = true , OR( AND( ISBLANK(PAR_DIV_Importe_a_Imputar_prof1__c) , !ISBLANK(PAR_LKP_Imputar_a_prof1__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_prof1__c), ISBLANK(PAR_LKP_Imputar_a_prof1__c)),
 AND( ISBLANK(PAR_DIV_Importe_a_Imputar_prof2__c), !ISBLANK(PAR_LKP_Imputar_a_prof2__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_prof2__c), ISBLANK(PAR_LKP_Imputar_a_prof2__c)), 
AND( ISBLANK(PAR_DIV_Importe_a_Imputar_prof3__c), !ISBLANK(PAR_LKP_Imputar_a_prof3__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_prof3__c), ISBLANK(PAR_LKP_Imputar_a_prof3__c)),
AND( ISBLANK(PAR_DIV_Importe_a_Imputar_gestor1__c) , !ISBLANK(PAR_LKP_Imputar_a_gestor1__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_gestor1__c) , ISBLANK(PAR_LKP_Imputar_a_gestor1__c)),
AND( ISBLANK(PAR_DIV_Importe_a_Imputar_gestor2__c) , !ISBLANK(PAR_LKP_Imputar_a_gestor2__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_gestor2__c) , ISBLANK(PAR_LKP_Imputar_a_gestor2__c)),
AND( ISBLANK(PAR_DIV_Importe_a_Imputar_gestor3__c) , !ISBLANK(PAR_LKP_Imputar_a_gestor3__c)),
 AND( !ISBLANK(PAR_DIV_Importe_a_Imputar_gestor3__c) , ISBLANK(PAR_LKP_Imputar_a_gestor3__c))
), false)</errorConditionFormula>
        <errorMessage>Debe rellenarse tanto el profesional como el importe a imputar</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Requerimiento_de_identificador</fullName>
        <active>false</active>
        <description>Regla de validación para requerir el campo Identificador</description>
        <errorConditionFormula>OR(ISBLANK(PAR_TXT_Identificador__c),ISNULL( PAR_TXT_Identificador__c))</errorConditionFormula>
        <errorDisplayField>PAR_TXT_Identificador__c</errorDisplayField>
        <errorMessage>El campo Identificador es requerido</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>desbordamiento_gestor</fullName>
        <active>true</active>
        <description>La suma de las imputaciones de los gestores tiene que ser menor o igual a la facturación CIA antes de impuestos</description>
        <errorConditionFormula>(PAR_DIV_Importe_a_Imputar_gestor1__c + PAR_DIV_Importe_a_Imputar_gestor2__c + PAR_DIV_Importe_a_Imputar_gestor3__c +
PAR_DIV_Importe_a_imputar_Departamento__c) &gt; PAR_DIV_Cargar_Comp_AI__c</errorConditionFormula>
        <errorMessage>el sumatorio de los importes a imputar de los gestores tiene que ser menor a la facturación CIA antes de impuestos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>desbordamiento_gestor_prof</fullName>
        <active>true</active>
        <description>el sumatorio de los importes a imputar de los profesionales y de los gestores tiene que ser menor a la facturacion a la CIA antes de impuestos</description>
        <errorConditionFormula>(PAR_DIV_Importe_a_Imputar_prof1__c + PAR_DIV_Importe_a_Imputar_prof2__c +
PAR_DIV_Importe_a_Imputar_prof3__c + PAR_DIV_Importe_a_Imputar_gestor1__c + PAR_DIV_Importe_a_Imputar_gestor2__c + PAR_DIV_Importe_a_Imputar_gestor3__c +
PAR_DIV_Importe_a_imputar_Departamento__c) &gt; PAR_DIV_Cargar_Comp_AI__c</errorConditionFormula>
        <errorMessage>el sumatorio de los importes a imputar de los profesionales y de los gestores tiene que ser menor a la facturacion a la CIA antes de impuestos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>desbordamiento_profesional</fullName>
        <active>true</active>
        <description>la suma de los importes del profesional tienen que ser menor a la liquidación del prof antes de impuestos</description>
        <errorConditionFormula>(PAR_DIV_Importe_a_Imputar_prof1__c+PAR_DIV_Importe_a_Imputar_prof2__c+PAR_DIV_Importe_a_Imputar_prof3__c)&gt;PAR_DIV_Liquidar_Prof_AI__c</errorConditionFormula>
        <errorMessage>el sumatorio de los importes a imputar de los profesionales tiene que ser menor a liquidación del prof antes de impuestos</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>orden_de_trabajo_anulada</fullName>
        <active>true</active>
        <description>el estado de la partida no puede ser modificada cuando su orden de trabajo ha sido anulada</description>
        <errorConditionFormula>if(PAR_CAS_Orden_Trabajo_Anulada__c,ISCHANGED(Status),false)</errorConditionFormula>
        <errorDisplayField>Status</errorDisplayField>
        <errorMessage>No se puede modificar el estado de una partida de una orden de trabajo anulada</errorMessage>
    </validationRules>
</CustomObject>